Posts now generate correctly

--- a/content/posts/should-google-have-dissolved-its-ai-ethics-board.mdx
+++ b/content/posts/should-google-have-dissolved-its-ai-ethics-board.mdx
@@ -1,8 +1,9 @@
 ---
-  title: "Should Google Have Dissolved Its Ai Ethics Board?"
-  author: "Jason Vlajankov"
-  date: 2022-07-05
-  tags: ["informationtechnology", "ethics"]
+title: "Should Google Have Dissolved Its Ai Ethics Board?"
+author: "Jason Vlajankov"
+date: 2022-07-05
+description: "A briefing paper on the dissolution of Google's AI ethics board, and the ethical implications of this decision."
+tags: ["informationtechnology", "ethics"]
 ---
 
 # Background 
