--- a/content/projects/personal-website.mdx
+++ b/content/projects/personal-website.mdx
@@ -2,8 +2,8 @@
 title: "Personal Website"
 date: "2023-04-12"
 author: "Jason Vlajankov"
-tags: ["frontend development", "software development", "blog", "portfolio"]
-description: "A personal blog and portfolio developed using the Next.js 13 framework."
+tags: ["frontend development", "software development", "portfolio"]
+description: "A personal portfolio website developed using the Next.js 13 framework."
 ---
 
 The website you're currently on!
