- Move header content into separate data object. - Sort projects by new feature: 'coolness' now instead.

--- a/content/projects/assessment-toolkit-for-safe-self-driving-cars.mdx
+++ b/content/projects/assessment-toolkit-for-safe-self-driving-cars.mdx
@@ -4,6 +4,7 @@ date: "2022-10-05"
 author: "Jason Vlajankov"
 tags: ["AI", "Self-Driving Cars", "Linux", "Docker", "Python", "Bash"]
 description: "An assessment toolkit to help make safe, self-driving cars a reality."
+coolness: 8
 ---
 
 I was part of a small team of developers that designed and implemented <b><a href="https://github.com/rjunderwood/avtestkit">AVTestKit</a></b>, a framework that assesses how safe a self-driving AI is in simulated, pre-crash scenarios.
