--- a/content/projects/personal-website.mdx
+++ b/content/projects/personal-website.mdx
@@ -4,6 +4,7 @@ date: "2023-04-12"
 author: "Jason Vlajankov"
 tags: ["frontend development", "software development", "portfolio"]
 description: "A personal portfolio website developed using the Next.js 13 framework."
+coolness: 4
 ---
 
 The website you're currently on!
