--- a/content/projects/raytracer.mdx
+++ b/content/projects/raytracer.mdx
@@ -4,6 +4,7 @@ date: "2023-12-05"
 author: "Jason Vlajankov"
 tags: ["software development"]
 description: "Produce images of objects with realistic 3D lighting using ray tracing."
+coolness: 6
 ---
 
 A ray tracing project, built following the [Ray Tracing in a Weekend](https://raytracing.github.io/books/RayTracingInOneWeekend.html) book.
