--- a/content/projects/raytracer.mdx
+++ b/content/projects/raytracer.mdx
@@ -9,7 +9,7 @@ coolness: 6
 
 A ray tracing project, built following the [Ray Tracing in a Weekend](https://raytracing.github.io/books/RayTracingInOneWeekend.html) book.
 
-![Ray Tracing Final Render](https://notes.jvlaj.com/ox-hugo/_20231201_214741screenshot.png)
+![Ray Tracing Final Render](https://raytracing.github.io/images/img-1.23-book1-final.jpg)
 
 This was my first real, practical introduction to anything resembling graphics programming.
 
